Display game on web page     - Iterate over the current state of game board     at the end of each turn     - Add mark at each index to displayed board     - Visible board updates each turn to reflect     the immutable gameBoard array to prevent     tampering

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,8 @@
 html {
     background-color: aqua;
 }
+
+#game-board {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
